--- a/tptp/src/main/resources/application.properties
+++ b/tptp/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-#서버포트 설정
+#포트 넘버 설정
 server.port=8888
-#타임리프 새로고침 설정
+
+#타임림프 새로고침 설정
 spring.thymeleaf.cache=false
+
+#로그 설정
+logging.config=classpath:logback-spring.xml
