--- a/tptp/src/main/resources/application.properties
+++ b/tptp/src/main/resources/application.properties
@@ -6,3 +6,15 @@ spring.thymeleaf.cache=false
 
 #로그 설정
 logging.config=classpath:logback-spring.xml
+
+#DB 접속 정보
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:mysql://127.0.0.1:3306/newDealDB?serverTimezone=UTC&characterEncoding=UTF8
+spring.datasource.username=newdealid
+spring.datasource.password=newdealpw
+
+#mybatis 설정(src/main/resources/ == classpath:)
+mybatis.mapper-locations:classpath:mapper/*.xml
+
+#dto 패키지 설정
+mybatis.type-aliases-package=com.tptp.dto
