--- a/tptp/src/main/resources/application.properties
+++ b/tptp/src/main/resources/application.properties
@@ -9,9 +9,9 @@ logging.config=classpath:logback-spring.xml
 
 #DB 접속 정보
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:mysql://127.0.0.1:3306/newDealDB?serverTimezone=UTC&characterEncoding=UTF8
-spring.datasource.username=newdealid
-spring.datasource.password=newdealpw
+spring.datasource.url=jdbc:log4jdbc:mysql://192.168.0.132:3306/newdealdb?serverTimezone=UTC&characterEncoding=UTF8
+spring.datasource.username=newdeal
+spring.datasource.password=newdealtptp
 
 #mybatis 설정(src/main/resources/ == classpath:)
 mybatis.mapper-locations:classpath:mapper/*.xml
