--- a/tptp/src/main/resources/application.properties
+++ b/tptp/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #포트 넘버 설정
-server.port=7777
+server.port=8888
 
 #타임림프 새로고침 설정
 spring.thymeleaf.cache=false
@@ -9,9 +9,9 @@ logging.config=classpath:logback-spring.xml
 
 #DB 접속 정보
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:mysql://192.168.0.132:3306/newdealdb?serverTimezone=UTC&characterEncoding=UTF8
-spring.datasource.username=newdeal
-spring.datasource.password=newdealtptp
+spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/newdealdb?serverTimezone=UTC&characterEncoding=UTF8
+spring.datasource.username=newdealid
+spring.datasource.password=newdealpw
 
 #mybatis 설정(src/main/resources/ == classpath:)
 mybatis.mapper-locations:classpath:mapper/*.xml
